<resources>
    <!--    /**-->
    <!--    * Giang Nguyen-->
    <!--    * Student# 301033256-->
    <!--    * Lab 5 - COPM304-->
    <!--    * Professor Haki Sharifi-->
    <!--    * */-->
    <string name="app_name" translatable="false">GiangLab5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Giang Nguyen</string>
    <string name="nav_header_subtitle" translatable="false">giangkawaii1999@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">giHome</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_giang" translatable="false">giaDown</string>
    <string name="menu_nguyen" translatable="false">NgSrv</string>
    <string name="menu_setting" translatable="false">NguSet</string>

    <string name="full_name" translatable="false">Giang Nguyen</string>
    <string name="firstname" translatable="false">Giang</string>
    <string name="lastname" translatable="false">Nguyen</string>
    <string name="student_id" translatable="false">301033256</string>

    <string-array name="courses">
        <item>Networking for Software Developers</item>
        <item>Data Structures and Algorithms</item>
        <item>Software Testing and Quality</item>
        <item>Programming 3</item>
        <item>Mobile Application Development</item>
        <item>Linear Algebra and Statistics</item>
    </string-array>

    <string-array name="font_size">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string name="download_img">Download Image</string>
    <string name="zipcode_hint">Enter ZIP code</string>
    <string name="call_api">Web Services</string>

    <string name="api_key" translatable="false">971eb52a984ddb54c6fdef9abe42df92</string>
    <string name="action_sms" translatable="false">SMS</string>
    <string name="action_localtion">Location</string>
    <string name="action_help">Help</string>
    <string name="color_radio_green">Green</string>
    <string name="color_radio_light_blue">Light Blue</string>
    <string name="color_radio_yellow">Yellow</string>
    <string name="choose_home_screen_color">Choose home screen color</string>
    <string name="display_time_format">Choose time format</string>
    <string name="display_text_size">Choose font size</string>
    <string name="hr12_format">12 Hour format</string>
    <string name="hr24_format">24 Hour format</string>
    <string name="save_setting">Save Setting</string>
    <string name="portrait_mode">Portrait Mode</string>
</resources>