<?xml version="1.0" encoding="utf-8"?>
<!--    /**-->
<!--    * Giang Nguyen-->
<!--    * Student# 301033256-->
<!--    * Lab 5 - COPM304-->
<!--    * Professor Haki Sharifi-->
<!--    * */-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_location"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/action_localtion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sms"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_textsms_24"
        android:title="@string/action_sms"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="3"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>