<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="giang.nguyen.s301033256.ui.home.GiHome"
        android:label="@string/menu_home"
        tools:layout="@layout/gi_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="giang.nguyen.s301033256.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="giang.nguyen.s301033256.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/giang_nav_giang"
        android:name="giang.nguyen.s301033256.ui.giang.GiaDown"
        android:label="@string/menu_giang"
        tools:layout="@layout/gia_down" />
    <fragment
        android:id="@+id/giang_nav_nguyen"
        android:name="giang.nguyen.s301033256.ui.nguyen.NgSrv"
        android:label="@string/menu_nguyen"
        tools:layout="@layout/ng_srv" />
    <fragment
        android:id="@+id/giang_nav_setting"
        android:name="giang.nguyen.s301033256.ui.settings.NguSet"
        android:label="@string/menu_setting"
        tools:layout="@layout/ngu_set" />
</navigation>